--- a/Blogs/blogs.css
+++ b/Blogs/blogs.css
@@ -193,7 +193,6 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   color: transparent;
-  margin-top: 20px;
   margin-bottom: 0 !important;
 }
 
@@ -224,59 +223,12 @@
   position: relative;
   z-index: 1;
 }
-/* #confessionArea .item {
-  height: 400px;
-  border: 4px solid #fe9548;
-  border-radius: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow: hidden;
-}
-.confession-author {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-  text-align: center;
-  letter-spacing: 0.01em;
-  margin-bottom: 0px !important;
-}
 
-.confession-title {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.01em;
-  margin-bottom: 0px !important;
+.cfs-sign i {
+  font-size: 24px;
+  background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
-
-.confession-introduction {
-  overflow: hidden;
-  margin: 0 30px;
-  text-align: justify;
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 19px;
-  letter-spacing: 0.02em;
-  height: 60px;
-  overflow: hidden;
-}
-
-#confessionArea .item img {
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  border: 4px solid #fe9548;
-  margin: 20px 20px 0px 20px;
-} */
