--- a/activities.css
+++ b/activities.css
@@ -4,7 +4,6 @@
   font-weight: 600;
   font-size: 50px;
   line-height: 61px;
-  /* display: flex; */
   align-items: center;
   text-align: center;
   letter-spacing: 0.01em;
@@ -13,7 +12,6 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  /* text-fill-color: transparent; */
   margin-bottom: 45px;
   margin-top: 70px;
 }
@@ -39,11 +37,15 @@
   font-size: 14px;
   line-height: 18px;
   padding: 15px 65px;
+  transition: all 0.2s ease;
 }
 
 .activities .see-more a:hover {
   background: linear-gradient(92deg, #fc6373 1.05%, #fe9548 98.6%);
   color: #fff;
+  border: 1px solid #fc6373;
+  transition: all 0.2s ease;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.31);
 }
 
 .activities_read_more a:hover {
@@ -165,7 +167,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  height: 34px;
+  max-height: 34px;
   margin-bottom: 4px !important;
 }
 
